@startuml CrazyChessTowers

class ChessboardPosition {
  + ChessboardPosition(const uint8_t vertical_square_id_, 
                       const uint8_t horizontal_square_id_)
  - uint8_t vertical_square_id_;
  - uint8_t horizontal_square_id_;
}

class Square {
  + Square(const ChessboardPosition &position)
  + bool isFree()
  + ChessboardPosition position()
 
  - ChessboardPosition position_
  - Figure *figure_
}


class Chessboard {
  + ChessBoard()
  + addFigure()
  + drawBoardInTerminal()

  - uint8_t boardHeight_ = 8
  - uint8_t boardWidth_ = 8
  - std::array<Square, boardHeight_, boardWidth_> Squares_
  /' - std::vector<Figure> Figures_ '/
}

class AbstractFigure {
  + move()  
  + uint8_t id()
  - static uint8_t id_
  - Square *square_
}

class TowerFigure {

}

Chessboard *-- Square
/' ChessBoard *-- Figure '/
Square *-- ChessboardPosition
AbstractFigure *-- ChessboardPosition
AbstractFigure <-- Square
AbstractFigure <|-- TowerFigure 

@enduml